tests/snapshots/render/ansi@commonmark-spec-191-html_blocks.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/191-html_blocks.md
snapshot_kind: text
---
[32m<table>
[0m
[32m  [0m[32m<tr>
[0m
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m<td>[0m                                                                        [32m │[0m
[32m│ [0m[33m  Hi[0m                                                                        [32m │[0m
[32m│ [0m[33m</td>[0m                                                                       [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

[32m  [0m[32m</tr>
[0m
[32m</table>
[0m
