tests/snapshots/render/ansi@commonmark-spec-211-link_reference_definitions.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/211-link_reference_definitions.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m[foo]: /url "title"[0m                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

[foo]
