tests/snapshots/render/ansi@commonmark-spec-214-link_reference_definitions.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/214-link_reference_definitions.md
snapshot_kind: text
---
]8;;file://HOSTNAME/ROOT/url\[1m[34mFoo[0m]8;;\
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

[90m▌ [0m[3mbar[0m
