tests/snapshots/render/ansi@commonmark-spec-225-paragraphs.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/225-paragraphs.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0maaa                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

bbb
