tests/snapshots/render/ansi@commonmark-spec-227-blank_lines.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/227-blank_lines.md
snapshot_kind: text
---
aaa

[1m[34maaa[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m
