tests/snapshots/render/ansi@commonmark-spec-229-block_quotes.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/229-block_quotes.md
snapshot_kind: text
---
  [1m[3m[34mFoo[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

[90m▌ [0m[3mbar[0m[3m baz[0m
