tests/snapshots/render/ansi@commonmark-spec-231-block_quotes.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/231-block_quotes.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m> # Foo                                                                     [32m │[0m
[32m│ [0m> bar                                                                       [32m │[0m
[32m│ [0m> baz                                                                       [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
